2005-07-07  Yves Combe  <yves@ycombe.net>

	fix missing updated file in previous commit.

	* src/boards/python/admin/Makefile.am:

2005-07-07  Yves Combe  <yves@ycombe.net>

	add treeview with icons for boards configuration.

	* src/boards/python/admin/board_list.py:
	* src/boards/python/admin/module_boards.py:
	* src/boards/python/administration.py:

2005-07-07  Bruno coudoin  <bruno.coudoin@free.fr>

	Fixed the POTFILES.in
	Changed all gtk.FALSE by False in all python script.
	gtk.FALSE is deprecated
		
	* po/POTFILES.in:
	* src/boards/python/admin/class_list.py:
	* src/boards/python/admin/user_list.py:
	* src/boards/python/administration.py:
	* src/boards/python/algorithm.py:
	* src/boards/python/anim.py:
	* src/boards/python/ballcatch.py:
	* src/boards/python/bargame.py:
	* src/boards/python/connect4.py:
	* src/boards/python/followline.py:
	* src/boards/python/gnumch.py:
	* src/boards/python/hexagon.py:
	* src/boards/python/melody.py:
	* src/boards/python/pythontest.py:
	* src/boards/python/redraw.py:
	* src/boards/python/searace.py:
	* src/boards/python/tuxpaint.py:
	* src/boards/python/watercycle.py:

2005-07-06  Yves Combe  <yves@ycombe.net>

	fix bug in administration module (module not loaded with right filename).
	add empty boards configuration module.

	* boards/skins/default/config_boards.png:
	* src/boards/py-gcompris-board.c: (pyGcomprisBoardType_getattr):
	* src/boards/python/admin/Makefile.am:
	* src/boards/python/admin/module.py:
	* src/boards/python/admin/module_boards.py:
	* src/boards/python/administration.py:
	* src/gcompris/board.c: (board_play):
	* src/gcompris/gcompris.c: (gcompris_init):

2005-07-06  Yves Combe  <yves@ycombe.net>

	add close/reopen in gcompris sound API, with bindings gcompris.sound.close() and gcompris.sound.reopen()
	Use these in tuxpaint launcher board to let tuxxpaint use the sound.

	* src/boards/py-mod-sound.c: (py_gcompris_reopen_sound),
	(py_gcompris_close_sound):
	* src/boards/python/tuxpaint.py: