@@ -1,5 +1,11 @@
 2005-07-07  Yves Combe  <yves@ycombe.net>
 
+	Localised title, and clean code.
+
+	* src/boards/python/admin/board_list.py:
+
+2005-07-07  Yves Combe  <yves@ycombe.net>
+
 	fix missing updated file in previous commit.
 
 	* src/boards/python/admin/Makefile.am:
